# mbt-web-server-poc-1

./: README.md
app/: moon.mod.json
app/main/: main.mbt  moon.pkg.json
server-runtime/: Cargo.toml  app_example.wasm
server-runtime/src/: main.rs
